<resources>
    <string name="app_name">TicTacToe2</string>
    <string name="homeTitle">Tic Tac Toe</string>
    <string name="playButton">Play</string>
    <string name="playerSetupTitle">Enter Your Name</string>
    <string name="label1">Player1</string>
    <string name="label2">Player2</string>
    <string name="submitButton">Submit Names</string>
    <string name="nameHint">Enter Your Name</string>
    <string name="playAgainButton">Play Again</string>
    <string name="homeButton">Home</string>
</resources>